--- a/src/Bundre.Task.App/Properties/launchSettings.json
+++ b/src/Bundre.Task.App/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Bundre.Task.App": {
+    "Bundre.Tasks.App": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
