--- a/src/Bundre.Task.Data/Bundre.Tasks.Data.csproj
+++ b/src/Bundre.Task.Data/Bundre.Tasks.Data.csproj
@@ -3,12 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Mappings\" />
-    <Folder Include="Repository\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bundre.Task.Business\Bundre.Task.Business.csproj" />
+    <ProjectReference Include="..\Bundre.Task.Business\Bundre.Tasks.Business.csproj" />
   </ItemGroup>
 
 </Project>
